--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,3 +1,23 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.active {
+    @apply block py-2 pr-4 pl-3 text-white rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 lg:p-0 dark:text-white;
+}
+
+.de_active {
+    @apply block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.1/Cafe24Shiningstar.woff')
+        format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 .pagination {
     display: flex;
     justify-content: center;
@@ -48,4 +68,15 @@ ul.pagination li:hover {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1000;
+}
+
+.dropdown_radio {
+    position: absolute;
+    inset: auto auto 0px 0px;
+    margin: 0px;
+    transform: translate3d(522.5px, 3847.5px, 0px);
+}
+
+a {
+    @apply text-primary-600;
 }
