--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -63,6 +63,12 @@ ul.pagination li:hover {
 }
 
 .loading_container {
+    margin: auto;
+    display: block;
+    shape-rendering: auto;
+    width: 100px;
+    height: 100px;
+
     position: absolute;
     top: 50%;
     left: 50%;
